fix rollback