@@ -23,12 +23,10 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.sonar.plugins.javascript.JavaScriptFilePredicate.isTypeScriptFile;
 
 import java.io.File;
-import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.sonar.api.batch.fs.FilePredicate;
@@ -45,7 +43,7 @@ class JavaScriptFilePredicateTest {
   private static final String newLine = System.lineSeparator();
 
   @Test
-  void testJavaScriptPredicate() throws IOException {
+  void testJavaScriptPredicate() {
     DefaultFileSystem fs = new DefaultFileSystem(baseDir);
     fs.add(createInputFile(baseDir, "a.js"));
     fs.add(createInputFile(baseDir, "b.ts"));
@@ -125,13 +123,13 @@ class JavaScriptFilePredicateTest {
       .stream()
       .filter(f -> !isTypeScriptFile(f))
       .map(InputFile::filename)
-      .collect(Collectors.toList());
+      .toList();
     assertThat(filenames)
       .containsExactlyInAnyOrder("a.js", "c.vue", "d.vue", "e.vue", "f.vue", "h.vue", "j.jsx");
   }
 
   @Test
-  void testTypeScriptPredicate() throws IOException {
+  void testTypeScriptPredicate() {
     DefaultFileSystem fs = new DefaultFileSystem(baseDir);
     fs.add(createInputFile(baseDir, "a.js"));
     fs.add(createInputFile(baseDir, "b.ts"));
@@ -202,12 +200,12 @@ class JavaScriptFilePredicateTest {
       .stream()
       .filter(JavaScriptFilePredicate::isTypeScriptFile)
       .map(InputFile::filename)
-      .collect(Collectors.toList());
+      .toList();
     assertThat(filenames).containsExactlyInAnyOrder("b.ts", "e.vue", "f.vue", "j.tsx");
   }
 
   @Test
-  void testYamlPredicate() throws IOException {
+  void testYamlPredicate() {
     var baseYamlFile =
       "".concat("apiVersion: apps/v1")
         .concat(newLine)
@@ -237,7 +235,7 @@ class JavaScriptFilePredicateTest {
     List<File> files = new ArrayList<>();
     fs.files(predicate).forEach(files::add);
 
-    List<String> filenames = files.stream().map(File::getName).collect(Collectors.toList());
+    var filenames = files.stream().map(File::getName).toList();
     assertThat(filenames)
       .containsExactlyInAnyOrder(
         "single-quote.yaml",
@@ -295,14 +293,13 @@ class JavaScriptFilePredicateTest {
   }
 
   private static InputFile createInputFile(Path baseDir, String relativePath, String content) {
-    InputFile file = new TestInputFileBuilder("moduleKey", relativePath)
+    return new TestInputFileBuilder("moduleKey", relativePath)
       .setModuleBaseDir(baseDir)
       .setType(Type.MAIN)
       .setLanguage(getLanguage(relativePath))
       .setCharset(StandardCharsets.UTF_8)
       .setContents(content)
       .build();
-    return file;
   }
 
   private static String getLanguage(String path) {
